feat: авторизация и аватарки